Added Application Logic